Fixed alignment issues with navbar on portfolio pages.

--- a/_sass/port-theme/sections/_portfolio-item.scss
+++ b/_sass/port-theme/sections/_portfolio-item.scss
@@ -270,19 +270,29 @@ $baseline-height: 1.6rem;
         @media (max-width: 700px) {
             padding: .25rem 0;
         }
-        .content {
+        .nav-links {
             margin: 0 auto;
+            padding: 0;
             width: 50%;
+            max-width: 1140px;
+            padding-top: .4rem;
+            
             @include media-breakpoint-down(lg) {
                 width: 90%;
             }
-            padding-top: .4rem;
-            @include media-breakpoint-down(lg) {
-                width: 80%;
+            @media (min-width: 576px) {
+                max-width: 540px;
             }
-            @include media-breakpoint-down(md) {
-                width: 70%;
+            @media (min-width: 768px) {
+                max-width: 720px;
             }
+            @media (min-width: 992px) {
+                max-width: 960px;
+            }
+            @media (min-width: 1200px) {
+                max-width: 1140px;
+            }
+            
             a:hover {
                 text-decoration: none;
             }
